--- a/po/zh-cn/zerotier.po
+++ b/po/zh-cn/zerotier.po
@@ -15,3 +15,33 @@ msgstr "基本设置"
 
 msgid "Interface Info"
 msgstr "接口信息"
+
+msgid "More options"
+msgstr "更多选项"
+
+msgid "Port of zerotier service, default 9993"
+msgstr "ZeroTier 服务端口，默认是 9993"
+
+msgid "Secret"
+msgstr "密钥"
+
+msgid "Secret of zerotier client"
+msgstr "本节点的密钥，请不要随意更改，留空会自动创建"
+
+msgid "Local configuration"
+msgstr "本地配置文件"
+
+msgid "Path to the local.conf"
+msgstr "local.conf 的配置文件，如 /etc/zerotier.conf"
+
+msgid "Configuration folder"
+msgstr "配置目录"
+
+msgid "Persistent configuration folder (for ZT controller mode)"
+msgstr "持久化配置目录（一般用于控制器模式）"
+
+msgid "Copy configuration folder"
+msgstr "拷贝配置目录"
+
+msgid "Copy configuration folder to RAM to prevent writing to flash (for ZT controller mode)"
+msgstr "拷贝配置目录来保护原有内容（一般用于预先配置的控制器模式）"
